--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/woodcock3/11ty-solid-start.git"
+    "url": "git+https://github.com/woodcox/abell-css-twind"
   },
-  "author": "woodcock3",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0-canary.18",
