--- a/.github/workflows/11tybuild-update.yml
+++ b/.github/workflows/11tybuild-update.yml
@@ -33,20 +33,14 @@ jobs:
         if: env.UPDATE_NPM != 'true'
         run: npm run minify
         
-#      - name: Deploy
-#        if: env.UPDATE_NPM != 'true'
-#        uses: peaceiris/actions-gh-pages@v3
-#        with:
-#          publish_dir: ./dist 
-#          publish_branch: gh-pages
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-        
-      - name: Commit changes
+      - name: Deploy
         if: env.UPDATE_NPM != 'true'
-        uses: EndBug/add-and-commit@v9
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          default_author: github_actions
-          message: "Update files"
+          publish_dir: ./dist 
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+        
           add: '["*.json", "docs"]'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
