--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "concurrently 'npm run serve' 'npm run css -- --watch'",
     "serve": "npx eleventy --serve",
     "css": "npx postcss src/css/global.css -o dist/css/global.css",
-    "production": "NODE_ENV=production npx eleventy && NODE_ENV=production npm run css"
+    "build": "NODE_ENV=production npx eleventy && NODE_ENV=production npm run css"
   },
   "keywords": [],
   "author": "",
