--- a/.github/workflows/11tybuild-update.yml
+++ b/.github/workflows/11tybuild-update.yml
@@ -11,7 +11,7 @@ concurrency:
 
 # Conditional environmental if's      
 env:
-  UPDATE_NPM: true # false = deploy eleventy , true = update npm
+  UPDATE_NPM: false # false = deploy eleventy , true = update npm
 
 jobs:
   build_deploy_eleventy:
