--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@11ty/eleventy": "^1.0.2",
+    "concurrently": "^7.6.0",
     "cssnano": "^5.1.14",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0",
     "postcss-import-ext-glob": "^2.1.1",
     "postcss-js": "^4.0.0",
     "slugify": "^1.6.5",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "prettier": "^2.8.2"
+    "prettier": "^2.3.2"
   }
 }
