--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "main": ".eleventy.js",
   "scripts": {
     "start": "concurrently 'npm run serve' 'npm run css -- --watch'",
-    "serve": "npx eleventy --serve",
+    "serve": "npx @11ty/eleventy --serve",
     "css": "npx postcss src/css/global.css -o dist/css/global.css",
-    "build": "NODE_ENV=production npx eleventy --pathprefix=abell-css-twind && NODE_ENV=production npm run css"
+    "build": "NODE_ENV=production npx @11ty/eleventy --pathprefix=abell-css-twind && NODE_ENV=production npm run css"
   },
   "keywords": [],
   "author": "",
