--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "concurrently 'npm run serve' 'npm run css -- --watch'",
     "serve": "npx @11ty/eleventy --serve",
     "css": "npx postcss src/css/global.css -o dist/css/global.css",
-    "build": "NODE_ENV=production npx @11ty/eleventy --pathprefix=abell-css-twind && NODE_ENV=production npm run css"
+    "build": "NODE_ENV=staging npx @11ty/eleventy --pathprefix=abell-css-twind && NODE_ENV=dev npm run css",
+    "minify": "NODE_ENV=production npx @11ty/eleventy --pathprefix=abell-css-twind && NODE_ENV=production npm run css"
   },
   "keywords": [],
   "author": "",
